--- a/app/views/hyrax/file_sets/_show_actions.html.erb
+++ b/app/views/hyrax/file_sets/_show_actions.html.erb
@@ -5,6 +5,9 @@
     <a class="btn btn-default btn-lg" href="<%= parent_path(parent) %>">
       <%= "Back to #{parent.human_readable_type}" %>
     </a>
+    <% if Rails.configuration.model_tree %>
+      <a class="btn btn-default btn-lg" href="<%= polymorphic_path([main_app, :model, presenter]) %>">Model</a>
+    <% end %>
   <% end %>
   <% if presenter.embeddable_type? && (can?(:edit, presenter) || presenter.allow_embed?) %>
     <form action="#" onsubmit="CopyToClipboard()" style="display:inline;">
