--- a/app/views/hyrax/monographs/_show_actions.html.erb
+++ b/app/views/hyrax/monographs/_show_actions.html.erb
@@ -8,17 +8,19 @@
     <% if presenter.member_presenters.size.positive? %>
       <%= link_to t("hyrax.file_manager.link_text"), polymorphic_path([main_app, :file_manager, presenter]), class: 'btn btn-default' %>
     <% end %>
- <% end %>
- <% if presenter.work_featurable? %>
-  <%= link_to "Feature", hyrax.featured_work_path(presenter, format: :json),
-          data: { behavior: 'feature' },
-          class: presenter.display_unfeature_link? ? 'btn btn-default collapse' : 'btn btn-default' %>
-
-  <%= link_to "Unfeature", hyrax.featured_work_path(presenter, format: :json),
-         data: { behavior: 'unfeature' },
-         class: presenter.display_feature_link? ? 'btn btn-default collapse' : 'btn btn-default' %>
- <% end %>
- <% if presenter.editor? %>
-   <%= link_to "Publish This #{@presenter.human_readable_type}", [main_app, :publish, @presenter], class: 'btn btn-primary', data: { confirm: "Publish this #{@presenter.human_readable_type}?" }, method: :post %>
- <% end %>
+  <% end %>
+  <% if presenter.work_featurable? %>
+    <%= link_to "Feature", hyrax.featured_work_path(presenter, format: :json),
+      data: { behavior: 'feature' },
+      class: presenter.display_unfeature_link? ? 'btn btn-default collapse' : 'btn btn-default' %>
+    <%= link_to "Unfeature", hyrax.featured_work_path(presenter, format: :json),
+      data: { behavior: 'unfeature' },
+      class: presenter.display_feature_link? ? 'btn btn-default collapse' : 'btn btn-default' %>
+  <% end %>
+  <% if presenter.editor? %>
+    <%= link_to "Publish This #{@presenter.human_readable_type}", [main_app, :publish, @presenter], class: 'btn btn-primary', data: { confirm: "Publish this #{@presenter.human_readable_type}?" }, method: :post %>
+    <% if Rails.configuration.model_tree %>
+      <%= link_to "Model", [main_app, :model, @presenter], class: 'btn btn-default' %>
+    <% end %>
+  <% end %>
 </div>
