--- a/app/views/hyrax/file_sets/media_display_embedded/_audio.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_audio.html.erb
@@ -42,8 +42,8 @@
        <%= raw file_set.transcript.present? ? 'data-transcript-div="audio-transcript-container" data-lyrics-mode' : 'data-include-transcript="false"' %>>
   <source src="<%= hyrax.download_path(file_set, file: 'ogg') %>" type="audio/ogg" />
   <source src="<%= hyrax.download_path(file_set, file: 'mp3') %>" type="audio/mpeg" />
-  <% if file_set.transcript.present? %>
-    <track kind="captions" src="<%= hyrax.download_path(file_set, file: 'vtt') %>" srclang="en" label="English" />
+  <% if file_set.closed_captions.present? %>
+    <track kind="captions" src="<%= hyrax.download_path(file_set, file: 'captions_vtt') %>" srclang="en" label="English" />
   <% end %>
   Your browser does not support the audio tag.
 </audio>
