--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -1,12 +1,12 @@
 <%
   level = 0
-  epub_presenter = @presenter.epub? ? @presenter.epub_presenter : @presenter.pdf_ebook_presenter
+  ebook_presenter = @presenter.epub? ? @presenter.epub_presenter : @presenter.pdf_ebook_presenter
   epub_policy = @presenter.epub? ? @monograph_policy.epub_policy : @monograph_policy.pdf_ebook_policy
   # we could show the buttons even if epub_policy.show? = false, as another entry point into the `epubs_access`...
   # subscription screen, much like the main "Read Book" button, but right now we don't do that.
   permit_download_buttons = @press_policy.allows_interval_download? && epub_policy.show?
 %>
-  <% epub_presenter.intervals.each_with_index do |interval, index| %>
+  <% ebook_presenter.intervals.each_with_index do |interval, index| %>
     <% if interval.level > level %>
       <% level += 1 %>
       <ul class="toc section">
@@ -24,20 +24,20 @@
       <li>
     <% end %>
     <div class="section-container">
-      <a class="toc-link" href="<%= epub_path(id: epub_presenter.id) + '#' + interval.cfi  %>" data-turbolinks="false"><%= interval.title %></a>
+      <a class="toc-link" href="<%= epub_path(id: ebook_presenter.id) + '#' + interval.cfi  %>" data-turbolinks="false"><%= interval.title %></a>
       <%# The Read button never appears by itself, it exists to somewhat encourage reading over downloading. %>
       <% if interval.downloadable? && permit_download_buttons %>
         <div class="btn-group download" role="group" aria-label="Read or Download Section">
           <% if @presenter.epub? %>
-            <a class="btn btn-default btn-sm toc-download-link" href="<%= epub_download_interval_path(id: epub_presenter.id, cfi: interval.cfi, title: interval.title) %>" data-turbolinks="false">
+            <a class="btn btn-default btn-sm toc-download-link" href="<%= epub_download_interval_path(id: ebook_presenter.id, cfi: interval.cfi, title: interval.title) %>" data-turbolinks="false">
           <% else %>
-            <a class="btn btn-default btn-sm toc-download-link" href="<%= epub_download_interval_path(id: epub_presenter.id, title: interval.title, chapter_index: index) %>" data-turbolinks="false">
+            <a class="btn btn-default btn-sm toc-download-link" href="<%= epub_download_interval_path(id: ebook_presenter.id, title: interval.title, chapter_index: index) %>" data-turbolinks="false">
           <% end %>
             <i id="download" class="oi" data-glyph="data-transfer-download" title="Download section" aria-hidden="true"></i> Download</a>
           <% if @presenter.epub? %>
-            <a class="btn btn-default btn-sm toc-link" href="<%= epub_path(id: epub_presenter.id, anchor: interval.cfi + "/4/1:0") %>">
+            <a class="btn btn-default btn-sm toc-link" href="<%= epub_path(id: ebook_presenter.id, anchor: interval.cfi + "/4/1:0") %>">
           <% else %>
-            <a class="btn btn-default btn-sm toc-link" href="<%= epub_path(id: epub_presenter.id) + '#' + interval.cfi %>" data-turbolinks="false">
+            <a class="btn btn-default btn-sm toc-link" href="<%= epub_path(id: ebook_presenter.id) + '#' + interval.cfi %>" data-turbolinks="false">
           <% end %>
             <span class="glyphicon glyphicon-book" title="Read section" aria-hidden="true"></span> Read</a>
         </div>
