restricted_message uses the press_presenter, fixes 500 bug

--- a/app/views/e_pubs/access/_heb.html.erb
+++ b/app/views/e_pubs/access/_heb.html.erb
@@ -1,7 +1,7 @@
 <div class="row restrict-title">
   <h1 class="sr-only">Access Restricted, Please Login to Continue Reading</h1>
   <div class="col-sm-12 col-center-block restrict-message">
-    <%= restricted_message(monograph_presenter.subdomain)&.html_safe %>
+    <%= press_presenter.restricted_message&.html_safe %>
   </div>
   <div class="row">
     <div class="col-sm-4">
