--- a/app/views/greensub/institutions/_products.html.erb
+++ b/app/views/greensub/institutions/_products.html.erb
@@ -6,7 +6,7 @@
     <div class="col-md-3"></div>
     <div class="col-md-2"></div>
   </div>
-  <div class="col-md-2">New Subscriber</div>
+<!--  <div class="col-md-2">New Subscriber</div>-->
   <hr/>
 </b>
 <% products.each do |product| %>
@@ -19,7 +19,7 @@
   </div>
   <div class="col-md-2">
     <%#= link_to(grant_path(grant), method: :delete, class: "btn btn-default", data: { confirm: 'Are you sure?' }) do %>
-    <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Destroy
+<!--    <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Destroy-->
     <%# end %>
   </div>
 <% end %>
