HELIO-3092 - adjust padding on visualize engagement text on publisher page

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -186,6 +186,10 @@ $heb-black-80: #342f2e;
       margin-bottom: 0;
     }
 
+    p.publisher-info {
+      padding-bottom: .8em;
+    }
+
     .container {
       margin-top: 0;
     }
