HELIO-3326 - add privacy page; add page to navigation; update links in GDPR message and terms page

--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -74,7 +74,7 @@
     window.umcookieconsent = {
       // Uncomment to simulate access outside US
       // law: { countryCode: 'UK' },
-      content: { href: 'https://www.lib.umich.edu/library-administration/user-privacy-policy-university-library' }
+      content: { href: 'https://fulcrum.org/privacy' }
      };
   </script>
 
