--- a/fulcrum/css/custom.css
+++ b/fulcrum/css/custom.css
@@ -937,7 +937,13 @@ h2#services {
     top: 10%; }
 
   .post-content ul.services-list li {
-    flex-basis: 30%; } }
+    flex-basis: 30%; }
+
+  .footer-copyright .container {
+    font-size: .9em;
+    text-align: left;
+    height: 53px;
+    line-height: 23px; } }
 @media only screen and (max-width: 700px) {
   #index-banner {
     height: 400px; }
