Crawler Trap (Optional)

--- a/fulcrum/css/custom.css
+++ b/fulcrum/css/custom.css
@@ -978,4 +978,11 @@ h2#services {
 footer.page-footer {
   margin: 0; }
 
+/* crawler trap seed link for Disallow: /robotrons/ statement in robots.txt */
+.robotrons {
+  position: absolute;
+  left:0px;
+  visibility: hidden;
+}
+
 /*# sourceMappingURL=custom.css.map */
