--- a/app/views/fulcrum/_reports.html.erb
+++ b/app/views/fulcrum/_reports.html.erb
@@ -6,5 +6,6 @@
   <li><%= link_to "APTrust Deposits", aptrust_deposits_path %></li>
   <li><%= link_to "COUNTER Reports", customers_path %></li>
   <li><%= link_to "Handle Deposits", handle_deposits_path %></li>
+  <li><%= link_to "Robotrons", robotrons_path %></li>
   <li><%= link_to "Tombstones", tombstones_path %></li>
 </ul>
