data-transcript-div uses closed_captions now

--- a/app/views/hyrax/file_sets/media_display/_audio.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_audio.html.erb
@@ -6,7 +6,7 @@
 <audio id="audio"
        preload="auto"
        data-able-player
-       <%= raw file_set.transcript.present? ? 'data-transcript-div="audio-transcript-container" data-lyrics-mode' : 'data-include-transcript="false"' %>>
+       <%= raw file_set.closed_captions.present? ? 'data-transcript-div="audio-transcript-container" data-lyrics-mode' : 'data-include-transcript="false"' %>>
   <source src="<%= hyrax.download_path(file_set, file: 'ogg') %>" type="audio/ogg" />
   <source src="<%= hyrax.download_path(file_set, file: 'mp3') %>" type="audio/mpeg" />
   <% if file_set.closed_captions.present? %>
@@ -14,6 +14,6 @@
   <% end %>
   Your browser does not support the audio tag.
 </audio>
-<% if file_set.transcript.present? %>
+<% if file_set.closed_captions.present? %>
   <div id="audio-transcript-container"></div>
 <% end %>
