--- a/app/views/hyrax/file_sets/media_display_embedded/_audio.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_audio.html.erb
@@ -33,13 +33,13 @@
   }
 </script>
 
-<% if file_set.transcript.present? %>
+<% if file_set.closed_captions.present? %>
   <div id="audio-transcript-container"></div>
 <% end %>
 <audio id="audio"
        preload="auto"
        data-able-player
-       <%= raw file_set.transcript.present? ? 'data-transcript-div="audio-transcript-container" data-lyrics-mode' : 'data-include-transcript="false"' %>>
+       <%= raw file_set.closed_captions.present? ? 'data-transcript-div="audio-transcript-container" data-lyrics-mode' : 'data-include-transcript="false"' %>>
   <source src="<%= hyrax.download_path(file_set, file: 'ogg') %>" type="audio/ogg" />
   <source src="<%= hyrax.download_path(file_set, file: 'mp3') %>" type="audio/mpeg" />
   <% if file_set.closed_captions.present? %>
