add link to UMP Altmetric report

--- a/app/views/hyrax/admin/stats/_altmetric.html.erb
+++ b/app/views/hyrax/admin/stats/_altmetric.html.erb
@@ -2,5 +2,6 @@
   <h1><span class="fa fa-circle-o"></span> Altmetrics Reports</h1>
 <% end %>
 
-Nothing to see here. Move on.
-
+<ul>
+  <li><a target="_blank" style="font-size: 20px;" href="https://www.altmetric.com/explorer/report/6c49fd39-9fdc-44eb-b37c-00b9bec5a966">University of Michigan Press</a></li>
+</ul>
