--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,3 +18,4 @@
   <% end %>
 <% end %>
 <%= render 'shared/brand_press_banner' if press_presenter.present? && show_banner?(current_actor, press_presenter.subdomain) %>
+<%= render 'shared/eula_press_banner' if press_presenter.present? && show_eula?(press_presenter.subdomain) %>
