tiny word change to institution report

--- a/app/views/hyrax/admin/stats/_institution.html.erb
+++ b/app/views/hyrax/admin/stats/_institution.html.erb
@@ -37,8 +37,8 @@ that will be emailed to the provided email address.</p>
     <div class="col-sm-1">
       <label for="report_type" class="col-form-label">Report Type</label>
       <select name="report_type" class="form-control">
-        <option value="request">Requests ("downloads")</option>
-        <option value="investigation">Investigations ("views", includes Requests")</option>
+        <option value="request">Requests ("downloads", includes Investigations)</option>
+        <option value="investigation">Investigations ("views")</option>
       </select>
     </div>
   </div>
