--- a/app/views/shared/_eula_press_banner.html.erb
+++ b/app/views/shared/_eula_press_banner.html.erb
@@ -2,7 +2,7 @@
 <div class="alert alert-info alert-dismissible banner container" role="alert" style="display: none;">
   <button type="button" onclick="banner_button_no()" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&#x2715</span></button>
   <p class="message"><%= raw t("eula_message.#{press_presenter.subdomain}") %></p>
-  <button type="button" onclick="banner_button_yes()" class="btn btn-default btn-lg" data-dismiss="alert" aria-label="I Agree. Close Dialog">I Agree</button>
+  <button type="button" onclick="banner_button_yes()" class="btn btn-default btn-lg" data-dismiss="alert" aria-label="OK. Close Dialog">OK</button>
 </div>
 <script type="text/javascript">
     function banner_button_no(){
