HELIO-3392 - tweak placement of EULA link in footer

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -2486,10 +2486,10 @@ $barpublishing-white: #fff;
       align-items: stretch;
       flex-grow: 2;
       flex-direction: row-reverse;
-      align-self: end;
 
       .custom-links {
         padding-right: 1.5em;
+        padding-top: 4.7em;
       }
     }
 
