move share button; remove out-of-date TODOs

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1043,7 +1043,7 @@ footer.press {
     margin-top: 3px;
   }
 
-  .btn-heliotrope-download {
+  .btn-heliotrope-download, .btn-group.share {
     display: inline-block;
     margin: 1em 0 0;
   }
