--- a/app/views/hyrax/file_sets/_media.html.erb
+++ b/app/views/hyrax/file_sets/_media.html.erb
@@ -4,18 +4,27 @@
   <figure title="<%= @presenter.alt_text.first %>">
     <%= render partial: @presenter.heliotrope_media_partial, locals: { file_set: @presenter } %>
     <figcaption<%= ' class="text-center"'.html_safe if @presenter.center_caption? %>><%= @presenter.attribute_to_html(:caption, render_as: :markdown, label: '') %></figcaption>
+    <div class="text-center">
     <% if @presenter.allow_download?  %>
-        <div class="text-center">
-          <a class="btn btn-default btn-lg btn-heliotrope-download" href="<%= hyrax.download_path(@presenter) %>" target="_blank">
-            <%= @presenter.download_button_label %>
-          </a>
-          <% if @presenter.extracted_text? %>
-            <a class="btn btn-default btn-lg btn-heliotrope-download" href="<%= hyrax.download_path(@presenter, file: 'extracted_text', filename: @presenter.extracted_text_download_filename) %>" target="_blank">
-              <%= @presenter.extracted_text_download_button_label %>
-            </a>
-          <% end %>
-        </div>
+      <a class="btn btn-default btn-lg btn-heliotrope-download" href="<%= hyrax.download_path(@presenter) %>" target="_blank">
+        <%= @presenter.download_button_label %>
+      </a>
+      <% if @presenter.extracted_text? %>
+        <a class="btn btn-default btn-lg btn-heliotrope-download" href="<%= hyrax.download_path(@presenter, file: 'extracted_text', filename: @presenter.extracted_text_download_filename) %>" target="_blank">
+          <%= @presenter.extracted_text_download_button_label %>
+        </a>
+      <% end %>
     <% end %>
+      <div class="btn-group share">
+        <button type="button" class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Share <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a href="http://twitter.com/intent/tweet?text=<%= @presenter.url_title %>&url=<%= @presenter.citable_link %>" target="_blank">Twitter</a></li>
+          <li><a href="http://www.facebook.com/sharer.php?u=<%= @presenter.citable_link %>&t=<%= @presenter.url_title %>" target="_blank">Facebook</a></li>
+          <li><a href="http://www.reddit.com/submit?url=<%= @presenter.citable_link %>" target="_blank">Reddit</a></li>
+          <li><a href="http://www.mendeley.com/import/?url=<%= @presenter.citable_link %>" target="_blank">Mendeley</a></li>
+        </ul>
+      </div>
+    </div>
   </figure> <!-- /.image/media -->
   <% if !@presenter.audio? && @presenter.transcript.present? %>
       <div class="panel panel-default transcript">
