HELIO-3430 - add survey that displays for oa titles on monograph catalog download or when reading in ereader; send parameters to survey; add ga event tracking

--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -1,7 +1,8 @@
 <% provide :page_title, @presenter.page_title %>
 <% provide :page_class, 'search monograph' %>
 <% provide :page_header do %>
-  <%# render 'shared/survey' %>
+    <!-- survey -->
+  <%= render 'shared/survey_modal' %>
   <!-- breadcrumbs -->
   <%= render 'shared/breadcrumbs' %>
 <% end %><!-- provide :page_header -->
