--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -50,6 +50,9 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
   <% if defined? @presenter.file_set_coins_title %>
     <span class="Z3988" title="<%= @presenter.file_set_coins_title %>" aria-hidden="true"></span>
   <% end %>
+  <% if @parent_presenter.open_access? %>
+    <%= render 'shared/survey_nonmodal' %>
+  <% end %>
   <div class="skip"></div>
   <div id="epub" class="<%= @subdomain %>">
     <div id="reader"></div>
