--- a/app/views/press_catalog/_index_list_monograph.html.erb
+++ b/app/views/press_catalog/_index_list_monograph.html.erb
@@ -1,4 +1,4 @@
-<% # container for document in index gallery view -%>
+<% # container for document in index list view -%>
 <% presenter = Hyrax::MonographPresenter.new(document, current_ability) %>
 <% counter = document_counter_with_offset(document_counter) %>
 <%= render partial: "index_list", locals: { document: document, counter: counter, presenter: presenter } %>
