--- a/app/views/shared/_survey_nonmodal.erb
+++ b/app/views/shared/_survey_nonmodal.erb
@@ -8,7 +8,7 @@
         <h4 class="modal-title" id="surveyNonModalLabel">Share the story of what Open Access means to you</h4>
       </div>
       <div class="modal-body">
-        <%= image_tag 'oa-lock-logo-lg.png',:alt => 'a graphic of a lock that is open, the universal logo for open access'  %>
+        <%= image_tag 'oa-lock-logo-lg.png', alt: 'a graphic of a lock that is open, the universal logo for open access'  %>
         <p>University of Michigan needs your feedback to better understand how readers are using openly available ebooks. You can help by taking a short, privacy-friendly survey.</p>
       </div>
       <div class="modal-footer">
