HELIO-3430 - set default color for no thanks link text to avoid theme overrides

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -221,6 +221,7 @@ div.skip {
     .btn-default:active {
       border: none;
       background: none;
+      color: #333;
     }
   }  
 }
@@ -268,6 +269,7 @@ div.skip {
     .btn-default:active {
       border: none;
       background: none;
+      color: #333;
     }
   } 
 
